# balance_bot

./: .gitignore  AGENTS.md  AUTO_RUN.md  ITERATE.md  Makefile  README.md  balance_bot.py  environment.sh  merge.md  midpoint.md  piconz.sh  pid_config.json  pyproject.toml  setup.sh
.jules/: simplify.md
printed_parts/: dcmotor.scad  self_balancing_wheel.3mf  self_balancing_wheel.scad  self_balancing_wheel_proj.3mf
src/balance_bot/: __init__.py  battery.py  config.py  diagnostics.py  enums.py  jules_client.py  leds.py  main.py  mocks.py  movement_check.py  piconzero.py  pid.py  robot_hardware.py  tuner.py  utils.py  wiring_check.py
src/balance_bot/adaptation/: battery.py  recovery.py  tuner.py
src/balance_bot/behavior/: agent.py  leds.py
src/balance_bot/hardware/: mocks.py  piconzero.py  piconzero_adapter.py  robot_hardware.py
src/balance_bot/reflex/: balance_core.py  pid.py
tests/: test_balance_core_params.py  test_balance_finder.py  test_battery.py  test_config_migration.py  test_diagnostics.py  test_i2c_config.py  test_imu_logic.py  test_imu_resilience.py  test_imu_yaw_roll.py  test_kickup_config.py  test_piconzero_driver.py  test_startup_logic.py  test_tuner.py  test_utils.py  test_wiring_check_bus.py
tests/benchmarks/: benchmark_tuner_deque.py  benchmark_tuning_params.py  test_tuner_perf.py
