[project]
name = "balance-bot"
version = "0.1.0"
description = "Self-balancing robot homebrew toy"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "mpu6050-raspberrypi>=1.2",
    "smbus2>=0.5.0",
]

[project.scripts]
balance-bot = "balance_bot.main:main"

[dependency-groups]
dev = [
    "ruff>=0.9.0",
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
